--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     --acc-color: #1572A1;
     --sec-color: #E3BEC6;
     --sec-color-2: #9AD0EC;
-    --font-color: #000;
+    --font-color: rgb(54, 54, 54);
 }
 
 * {
@@ -12,10 +12,15 @@
     list-style-type: none;
     text-decoration: none;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    color: var(--font-color);
 }
 
-a:visited {
+a:visited, a:link, a:active {
     color: var(--font-color);
+}
+
+a:hover {
+    color: var(--acc-color);
 }
 
 body {
@@ -33,21 +38,59 @@ header {
     box-shadow: 0px 1px 15px var(--font-color);
     position: fixed;
     width: 100%;
+    top: 0;
 }
 
 header > h1 {
     font-size: 40px;
     font-weight: 100;
-    padding-left: 100px;
+    padding-left: 120px;
 }
 
 #nav-list {
     display: flex;
     gap: 100px;
     font-size: 18px;
-    padding-right: 100px;
+    padding-right: 120px;
 }
 
-#nav-list > li > a:hover {
-    color: var(--acc-color);
+/* Presentation Section */
+
+#presentation {
+    margin-top: 100px;
+    display: flex;
+}
+
+#greeting {
+    padding: 240px 0 0 200px;
+}
+
+#greeting > h2 {
+    font-size: 58px;
+    font-weight: 200;
+    letter-spacing: 3px;
+}
+
+#greeting > h3 {
+    font-size: 36px;
+    font-weight: 200;
+}
+
+#greeting > div {
+    display: flex;
+    gap: 30px;
+    margin: 30px 0;
+    font-size: 35px;
+}
+
+#image {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex: 1;
+}
+
+#image > img {
+    width: 650px;
+    height: auto;
 }
