--- a/style.css
+++ b/style.css
@@ -25,6 +25,9 @@ a:hover {
 
 body {
     background-color: var(--bg-color);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 /* Header Section */
@@ -56,41 +59,83 @@ header > h1 {
 
 /* Presentation Section */
 
-#presentation {
-    margin-top: 100px;
-    display: flex;
+/* Mobile display */
+@media (max-width: 1079px) {
+    #presentation {
+        margin-top: 100px;
+        display: grid;
+        grid-template-rows: repeat(2, 280px);
+        grid-template-columns: 100%;
+        padding-top: 12vh;
+    }
+    #greeting > h2 {
+        font-size: 32px;
+        font-weight: 200;
+        letter-spacing: 3px;
+        text-align: center;
+    }
+    #greeting > h3 {
+        font-size: 26px;
+        font-weight: 200;
+        text-align: center;
+    }
+    #greeting > div {
+        display: flex;
+        gap: 30px;
+        margin: 30px 0;
+        font-size: 35px;
+        justify-content: center;
+    }
+    #greeting > span {
+        text-align: center;
+        display: block;
+    }
+    #image {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex: 1;
+    }
+    #image > img {
+        width: clamp(412px, 100%, 500px);
+        height: auto;
+    }
 }
 
-#greeting {
-    padding: 240px 0 0 200px;
-}
-
-#greeting > h2 {
-    font-size: 58px;
-    font-weight: 200;
-    letter-spacing: 3px;
-}
-
-#greeting > h3 {
-    font-size: 36px;
-    font-weight: 200;
-}
-
-#greeting > div {
-    display: flex;
-    gap: 30px;
-    margin: 30px 0;
-    font-size: 35px;
-}
-
-#image {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex: 1;
-}
-
-#image > img {
-    width: 650px;
-    height: auto;
+@media (min-width: 1080px) {
+    #presentation {
+        width: 80%;
+        margin-top: 100px;
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        padding-top: 5vh;
+    }
+    #greeting {
+        padding: 200px 0 0 0;
+    }
+    #greeting > h2 {
+        font-size: 58px;
+        font-weight: 200;
+        letter-spacing: 3px;
+    }
+    #greeting > h3 {
+        font-size: 36px;
+        font-weight: 200;
+    }
+    #greeting > div {
+        display: flex;
+        gap: 30px;
+        margin: 30px 0;
+        font-size: 35px;
+    }
+    #image {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex: 1;
+    }
+    #image > img {
+        width: 600px;
+        height: auto;
+    }
 }
